--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/moment": "^1.6.0",
     "@nuxtjs/vuetify": "^1.0.0",
+    "@types/uuid": "^3.4.7",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
