--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "@nuxtjs/vuetify": "^1.2.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/moment": "^1.6.0",
-    "@nuxtjs/vuetify": "^1.0.0",
     "@types/uuid": "^3.4.7",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
