--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "nuxt": "^2.0.0",
-    "@nuxtjs/vuetify": "^1.2.0"
+    "@nuxtjs/vuetify": "^1.2.0",
+    "nuxt-material-design-icons": "^1.0.4",
+    "@nuxtjs/moment": "^1.6.0",
+    "@types/uuid": "^3.4.7"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.6",
-    "@nuxtjs/moment": "^1.6.0",
-    "@types/uuid": "^3.4.7",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
-    "nuxt-material-design-icons": "^1.0.4",
     "vue-jest": "^4.0.0-0"
   }
 }
